fix flex-wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,6 @@
 }
 
 body {
-  
-
   margin: 0;
 
   color: #0E0E0E;
@@ -34,13 +32,10 @@ main {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  box-sizing: border-box;
-  flex-wrap: wrap;
 
   margin: 0;
 
   width: 100vw;
-  height: 100vh;
 }
 
 .weather-now {
@@ -49,8 +44,6 @@ main {
   align-items: center;
 
   width: 399px;
-
-  /*border: 2px solid;*/
 }
 
 .weather-week {
@@ -178,8 +171,6 @@ hr {
 .flex-center {
   display: flex;
   justify-content: center;
-
-  
 }
 
 .weather-week > .this-week {
